packages/next-swc/crates/core/tests/errors/next-font-loaders/export-let/input.js
import React from 'react'
import { Abel, Inter } from 'neer-font/google'

export let firaCode = Abel()
export var inter = Inter()
